Business layer has been implemented.

--- a/CompanyName/CompanyName.Api/appsettings.json
+++ b/CompanyName/CompanyName.Api/appsettings.json
@@ -1,8 +1,45 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-AH12PAJ\\SQLEXPRESS;Database=CompanyNameDb;MultipleActiveResultSets=true;Trusted_Connection=True;"
+  },
+  "JwtConfiguration": {
+    "Audience": "localhost",
+    "ClockSkew": 0, //Time in minutes
+    "Issuer": "companynamewebapi",
+    "Key": "iNivDmHLpUA223sqsfhqGbMRdRj1PVkH",
+    "TokenExpirationTime": 1, //Time in minutes
+    "ValidateIssuerSigningKey": true,
+    "ValidateLifetime": true
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Error",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "MSSqlServer",
+        "Args": {
+          "connectionString": "Server=DESKTOP-7TQVF0A\\SQLEXPRESS;Database=CompanyNameDb;MultipleActiveResultSets=true;Trusted_Connection=True;",
+          "tableName": "Log"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "C:\\Users\\dogan\\Source\\Repos\\.NetCore2.2WebApiProjectTemplate\\CompanyName\\CompanyName.Api\\Log",
+          "rollingInterval": "Minute"
+        }
+      }
+    ]
+  }
 }
