--- a/CompanyName/CompanyName.Business/CompanyName.Business.csproj
+++ b/CompanyName/CompanyName.Business/CompanyName.Business.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CompanyName.Domain\CompanyName.Domain.csproj" />
+    <ProjectReference Include="..\CompanyName.Repository\CompanyName.Repository.csproj" />
+  </ItemGroup>
+
 </Project>
